[package]
name = "game-engine"
version = "0.1.0"
authors = ["Jamie VanderBoon <jamiev.integritymedia.group>"]
edition = "2018"
build = "build.rs"

[dependencies]
byteorder = "1.3.4"
font-kit = "0.10.0"
futures = { version = "0.3.5", features = ["thread-pool"] }
image = "0.23.9"
lazy_static = "1.4.0"
memoffset = "0.5.5"
nalgebra = "0.22.0"
pathfinder_geometry = "0.5.1"
typenum = "1.12.0"
vulkan = { git = "https://github.com/nice-game/vulkan-rs" }
winit = "0.22.2"

[build-dependencies]
shaderc = "0.6.2"
