[package]
name = "vulkan"
version = "0.1.0"
authors = ["Jamie VanderBoon <jamiev.integritymedia.group>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.30.0"
atomic = "0.4.5"
log = "0.4.8"
petgraph = "0.5.0"
raw-window-handle = "0.3.3"
thread_local = "1.0.1"
typenum = "1.12.0"
vk-mem = "0.2.2"
